rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x852_1997_CCR.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x852_1997_CCR.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 60, column 2]
    │
    │ 
 60 │  C-INITIALIZE-RI ::= [11]  SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 61 │    version-number
 62 │      [0]  BIT STRING {version1(0), version2(1)} DEFAULT {version2},
 63 │    ...,
 64 │    ccr-requirements
 65 │      [1]  Ccr-requirements DEFAULT {static-commitment},
 66 │    ready-collision-reservation     [2]  BOOLEAN DEFAULT TRUE,
 67 │    ...,
 68 │    user-data                       User-data OPTIONAL
 69 │  }
    │
────╯
