rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x880_1994-TC1-Amd1_Remote-Operations-Generic-ROS-PDUs.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x880_1994-TC1-Amd1_Remote-Operations-Generic-ROS-PDUs.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 30, column 2]
    │
    │ 
 30 │  (CONSTRAINED BY { -- must conform to the above definition --} ! ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 31 │   RejectProblem:general-unrecognizedPDU)
    │
────╯
