rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x880_1994-TC1-Amd1_Remote-Operations-Useful-Definitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x880_1994-TC1-Amd1_Remote-Operations-Useful-Definitions.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 80, column 2]
    │
    │ 
 80 │  Forward{OPERATION:OperationSet} OPERATION ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 81 │    {OperationSet | OperationSet.&Linked.&Linked |
 82 │     OperationSet.&Linked.&Linked.&Linked.&Linked}
    │
────╯
