rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x880_1994-TC1_Remote-Operations-Information-Objects.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x880_1994-TC1_Remote-Operations-Information-Objects.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod remote_operations_information_objects {
    extern crate alloc;
    use super::remote_operations_useful_definitions::{EMPTY_BIND, EMPTY_UNBIND};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum Code {
        local(Integer),
        global(ObjectIdentifier),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0.."))]
    pub struct Priority(pub Integer);
}
