rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x880_1994-TC1_Remote-Operations-Useful-Definitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x880_1994-TC1_Remote-Operations-Useful-Definitions.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 30, column 2]
    │
    │ 
 30 │  Forward{OPERATION:OperationSet} OPERATION ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 31 │    {OperationSet | OperationSet.&Linked.&Linked |
 32 │     OperationSet.&Linked.&Linked.&Linked.&Linked}
    │
────╯
