rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x881_1994-Amd1_Remote-Operations-Information-Objects-extensions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x881_1994-Amd1_Remote-Operations-Information-Objects-extensions.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 27, column 2]
    │
    │ 
 27 │  APPLICATION-CONTEXT ::= CLASS { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 28 │    &probe                   BOOLEAN DEFAULT FALSE,
 29 │    &acknowledge             BOOLEAN DEFAULT FALSE,
 30 │    &associationContract     CONTRACT,
 31 │    &associationRealization  REALIZATION OPTIONAL,
 32 │    &transferRealization     REALIZATION,
 33 │    &AbstractSyntaxes        ABSTRACT-SYNTAX,
 34 │    &applicationContextName  OBJECT IDENTIFIER UNIQUE
 35 │  }
    │
────╯
