rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x881_1994_Remote-Operations-Information-Objects-extensions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x881_1994_Remote-Operations-Information-Objects-extensions.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 24, column 2]
    │
    │ 
 24 │  APPLICATION-CONTEXT ::= CLASS { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 25 │    &associationContract     CONTRACT,
 26 │    &associationRealization  REALIZATION OPTIONAL,
 27 │    &transferRealization     REALIZATION,
 28 │    &AbstractSyntaxes        ABSTRACT-SYNTAX,
 29 │    &applicationContextName  OBJECT IDENTIFIER UNIQUE
 30 │  }
    │
────╯
